[package]
name = "cloudrave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rodio = "0.15"
anyhow = "1.0"
glob = "0.3"
hex-literal = "0.3"
rand = "0.8"
log = "0.4"
clap = { version = "3.2.8", features = ["derive"] }
